Se crearon los getEmpleados y es portable en otros dispositivos

--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="https://www.bing.com/images/search?view=detailV2&mediaurl=https%3a%2f%2flookaside.fbsbx.com%2flookaside%2fcrawler%2fmedia%2f%3fmedia_id%3d309482705737157&expw=750&exph=750&cbid=OLC.ZLwSGbCFtf%2BvRg480x360&cbn=local&idpp=local&thid=OLC.ZLwSGbCFtf%2BvRg480x360&ypid=YN9000x1001351958&useBFPR=0&eeptype=PhotoGroups&dataGroup=local:datagroup.photos&PhotoGroupName=AllPhotos&PageTag=AllPhotos&selectedIndex=1&id=OLC.ZLwSGbCFtf%2BvRg480x360&q=luhmann%20aberturas&pseg=Retail&noidpclose=0&FORM=LOCIMG&ajaxhist=0&ajaxserp=0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Luhmann Aberturas</title>
   </head>
   <body>
+    <script>
+      document.cookie = 'cookieName=value; SameSite=None; Secure';
+    </script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    
   </body>
 </html>
